--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <html>
-
   <head>
       <style>
          html {
@@ -7,21 +6,22 @@
              height: 100%;
          }
       </style>
-      
       <meta charset="UTF-8">
       <meta name="description" content="HTML Clicker Game">
       <meta name="keywords" content="Game,Clicker,Clicker Game, HTML game, HTML,Efendo Github, Efendo, HTMClicker">
       <meta name="author" content="Efendo">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="icon" type="image/x-icon" href="icon.ico">
-    <link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css" />
-    <script defer src="https://pyscript.net/latest/pyscript.js"></script>
-    <title>HTMClicker</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+      <link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css" />
+      <script defer src="https://pyscript.net/latest/pyscript.js"></script>
+      <title>HTMClicker</title>
+      <script src="https://cdn.tailwindcss.com"></script>
   </head>
-
-  <body class="bg-teal-500 dark:bg-teal-800">
-  <div class="rounded-lg bg-white dark:bg-black my-16">
+    <body class="flex justify-center bg-teal-500 dark:bg-teal-800">
+    <div class="rounded-lg bg-white dark:bg-black my-16">
+    <h6 class="text-center text-black dark:text-white">
+      made by <a href="http://github.com/Efendo">Efendo</a>
+    </h6>
     <h1 class="font-bold text-6xl text-center dark:text-white">HTMClicker</h1>
     <py-script>
       class Cbutton:
@@ -38,8 +38,7 @@
     <div class="flex justify-center"> <button py-click="C.click()" class="flex justify-center bg-teal-500 text-4xl text-white px-4 py-2 rounded-full m-9 hover:bg-teal-600 dark:text-black" type="button">click</button></div>
    </div>
       <h6 class="text-center text-white dark:text-black">
-         made by <a href="http://github.com/Efendo">Efendo</a>
+        made by <a href="http://github.com/Efendo">Efendo</a>
       </h6>
-      
   </body>
 </html>
