Made it unable to zoom on the website for better clicking expirience

--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
-<html>
+<html class="no-zoom">
   <head>
+      <style>
+    .no-zoom {
+    overflow: hidden;
+    touch-action: manipulation;
+    user-scalable: none;
+    -ms-content-zooming: none;
+    -ms-touch-action: manipulation;
+    }
+      </style>
       <style>
          html {
              width: 100%;
