--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       <title>HTMClicker</title>
       <script src="https://cdn.tailwindcss.com"></script>
   </head>
-    <body class="flex justify-center bg-teal-500 dark:bg-teal-800">
-    <div class="rounded-lg bg-white dark:bg-black my-16">
+    <body class="flex justify-center bg-teal-500 dark:bg-teal-700">
+    <div class="rounded-lg bg-white dark:bg-black my-16 shadow-2xl">
     <h6 class="text-center text-black dark:text-white">
       made by <a href="http://github.com/Efendo">Efendo</a>
     </h6>
@@ -44,7 +44,7 @@
       C = Cbutton()
     </py-script>
     <h1 id="ScoreDisp" class="text-center text-8xl m-9 dark:text-white">0</h1>
-    <div class="flex justify-center"> <button py-click="C.click()" class="flex justify-center bg-teal-500 text-4xl text-white px-4 py-2 rounded-full m-9 hover:bg-teal-600 dark:text-black" type="button">click</button></div>
+    <div class="flex justify-center"> <button py-click="C.click()" class="flex justify-center bg-teal-500 text-4xl text-white px-4 py-2 rounded-full m-9 hover:bg-teal-600 dark:text-black" type="button">Click</button></div>
    </div>
   </body>
 </html>
