--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
       <script src="https://cdn.tailwindcss.com"></script>
   </head>
     <body class="flex justify-center bg-teal-500 dark:bg-teal-700">
-    <div class="rounded-lg bg-white dark:bg-black my-16 shadow-2xl">
+    <div class="rounded-lg bg-white dark:bg-black my-16 shadow-2xl border-8 border-black">
     <h6 class="text-center text-black dark:text-white">
       made by <a href="http://github.com/Efendo">Efendo</a>
     </h6>
     <h1 class="font-bold text-6xl text-center dark:text-white">HTMClicker</h1>
     <py-script>
-      class Cbutton:
+     class Cbutton:
       	def __init__(self):
       		self.score = 0
       
@@ -41,10 +41,10 @@
       		self.score += 1
       		pyscript.write('ScoreDisp', self.score)
       
-      C = Cbutton()
+     C = Cbutton()
     </py-script>
     <h1 id="ScoreDisp" class="text-center text-8xl m-9 dark:text-white">0</h1>
-    <div class="flex justify-center"> <button py-click="C.click()" class="flex justify-center bg-teal-500 text-4xl text-white px-4 py-2 rounded-full m-9 hover:bg-teal-600 dark:text-black" type="button">Click</button></div>
+    <div class="flex justify-center"> <button py-click="C.click()" class="flex justify-center bg-teal-500 text-4xl text-white px-4 py-2 rounded-full m-9 hover:bg-teal-600 dark:text-black border-8 border-black" type="button">Click</button></div>
    </div>
   </body>
 </html>
